minor layout issue

--- a/podiobooks/themes/pb2-jq/static/css/small-screen.css
+++ b/podiobooks/themes/pb2-jq/static/css/small-screen.css
@@ -627,7 +627,6 @@
 	}
 	.rating-widget-wrap{
 		width:100%;
-		float:none;
 	}
 	
 }
